pkl-core/src/test/files/LanguageSnippetTests/input/errors/noDefault4.pkl
local typealias B = Listing<String> | String
local typealias C = B(true)

c: C
